--- a/scss/components/_editor.scss
+++ b/scss/components/_editor.scss
@@ -4,7 +4,8 @@ $editor-line-height: 1.3;
 
 .editor {
     grid-area: editor;
-    display: flex;
+    display: grid;
+    grid-template-rows: 30px auto;
     flex-direction: column;
     font-family: 'Fira Code', Consolas, monospace, sans-serif;
     font-size: 20px;
@@ -13,12 +14,12 @@ $editor-line-height: 1.3;
     overflow: auto;
 
     &__text-area-block {
+        width: 100%;
         display: flex;
         margin-top: 5px;
     }
 
     &__text-area {
-        flex-grow: 1;
         height: 100%;
         background-color: transparent;
         border: none;
